[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Glossary.gd" type="Script" id=1]
[ext_resource path="res://Art/glossariy.png" type="Texture" id=2]
[ext_resource path="res://UI/GlossaryButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Buttons/ClosePressed.png" type="Texture" id=4]
[ext_resource path="res://Art/Buttons/CloseNotPressed.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="TextureRect"]
margin_left = 12.0
margin_top = 20.0
margin_right = 142.0
margin_bottom = 140.0
rect_min_size = Vector2( 130, 120 )

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/Control/ScrollContainer"]
margin_right = 130.0
margin_bottom = 136.0
rect_min_size = Vector2( 130, 0 )

[node name="TextureButton" parent="TextureRect/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
label_text = "sifjsdbf skdfbksjdbf ksjdbf ksbdf ksjdbf ksbdf kjbsdf"

[node name="Label" parent="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton" index="0"]
text = "Control"

[node name="TextureButton2" parent="TextureRect/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 20.0
margin_bottom = 36.0
label_text = " sdf sljdf s bsd kjbfsd  jksbdf skjdf"

[node name="Label" parent="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton2" index="0"]
text = "Kladenec"

[node name="TextureButton3" parent="TextureRect/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 40.0
margin_bottom = 56.0
label_text = "phkrnth ro nrjb bhj brohj"

[node name="Label" parent="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton3" index="0"]
text = "Murom"

[node name="TextureButton4" parent="TextureRect/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 60.0
margin_bottom = 76.0
label_text = "bojuierh j kjbdn, bgjsdb,mdf jkfdbgjbd gjdflg bdfj gldfbgm,df g nk"

[node name="Label" parent="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton4" index="0"]
text = "Chernigov"

[node name="TextureButton5" parent="TextureRect/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 80.0
margin_bottom = 96.0
label_text = "ousdfj sdfkj svd fkshdvf ksvd fksd fksv dkfjblsjb fsljdbfl jsbdljf bsdb l"

[node name="Label" parent="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton5" index="0"]
text = "Tugarin"

[node name="TextureButton6" parent="TextureRect/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 100.0
margin_bottom = 116.0
label_text = "123456789"

[node name="Label" parent="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton6" index="0"]
text = "Ilya"

[node name="TextureButton7" parent="TextureRect/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 120.0
margin_bottom = 136.0
label_text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non ornare eros. Vivamus bibendum, purus in efficitur hendrerit, orci nulla lacinia dolor, non vehicula sapien neque id velit. Sed auctor diam vel velit dignissim, vel faucibus enim tempus. Nam euismod justo vel orci elementum, a eleifend dolor dictum. Nulla facilisi. Vivamus at est vel erat lacinia tincidunt. Praesent euismod nisl eget neque interdum, a aliquet orci luctus. Sed sed felis non mi mollis convallis at et dui. In hac habitasse platea dictumst."

[node name="Label" parent="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton7" index="0"]
text = "Solovey"

[node name="Control2" type="Control" parent="TextureRect"]
margin_left = 158.0
margin_top = 20.0
margin_right = 288.0
margin_bottom = 140.0
rect_min_size = Vector2( 130, 120 )

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/Control2/ScrollContainer"]
margin_right = 130.0
margin_bottom = 110.0
rect_min_size = Vector2( 130, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/Control2/ScrollContainer/VBoxContainer"]
margin_right = 130.0
margin_bottom = 110.0
rect_min_size = Vector2( 130, 110 )

[node name="Glossary" type="Label" parent="TextureRect"]
margin_left = 48.0
margin_top = 6.0
margin_right = 103.0
margin_bottom = 20.0
text = "Glossary"

[node name="ChoosingItem" type="Label" parent="TextureRect"]
margin_left = 205.0
margin_top = 6.0
margin_right = 245.0
margin_bottom = 20.0

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -26.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_TextureButton_pressed"]

[editable path="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton"]
[editable path="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton2"]
[editable path="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton3"]
[editable path="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton4"]
[editable path="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton5"]
[editable path="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton6"]
[editable path="TextureRect/Control/ScrollContainer/VBoxContainer/TextureButton7"]
